# hirebox-data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  dockerfile  generate_cv_questions_prompt.md  generate_cv_questions_prompt.txt  main.py  moussa_generate_cv_questions_prompt.md  prompt_file.py  pyproject.toml  rapport_choix_modele_GLM51.docx  rapport_choix_modele_GLM51.md  script.py
.github/workflows/: ci.yml
src/: api.py  gemma_ai.py  generate_question_handler.py  glm_ai.py  hf_glm_ai.py  question.py  security.py  spi.py
