[project]
name = "hirebox-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi[standard]>=0.135.3",
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "scalar-fastapi>=1.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
]

[tool.mypy]
python_version = "3.14"
files = ["main.py", "src"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.fastapi]
entrypoint = "main:app"